Implemented the composite two digit numbers